--- a/src/routes/LoginRoute/LoginRoute.css
+++ b/src/routes/LoginRoute/LoginRoute.css
@@ -24,6 +24,10 @@
     margin: 0;
 }
 
+.alert p{
+    color: yellowgreen;
+}
+
 @media (min-width: 320px) and (max-width: 480px) {
     .form-box {
         width: 300px;
